[build-system]
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dawnpy-udp"
version = "0.1.0"
description = "UDP transport package for Dawn built on top of dawnpy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dawnpy",
  "click>=8.1",
]

[project.urls]
Repository = "https://github.com/railab/dawnpy-udp"
Documentation = "https://railab.github.io/dawn/tools/dawnpy-udp.html"
"Dawn Project" = "https://github.com/railab/dawn"

[project.scripts]
dawnpy-udp = "dawnpy_udp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dawnpy_udp*"]

[tool.setuptools.package-data]
dawnpy_udp = ["py.typed"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79
